html/css/main.css
body {
  background:#1470b2;
  margin: 2em 1em;
  text-align: center;
  font-size: 1.8em;
  font-family: sans-serif;
  color: #e6f0f0;
}

footer {
  margin: 0;
  padding: 0;
  font-size: 80%;
}

div#content {
  height: 100%;
  display: flex;
  align-items: center;
}

div#logo {
  width: 100%;
}

div#main {
  width: 100%;
}

div#logo img {
  padding-right: 100px;
}

img {
  max-width: 100%;
}

a {
  color: #e6f0f0;
  text-decoration: none;
  font-weight: bold;
}

a:link {
  color: #e6f0f0;
  text-decoration: none;
  font-weight: bold;
}

a:active {
  color: #ff9500;
  text-decoration: none;
  font-weight: bold;
}

a:hover {
 color: #ff9500;
 text-decoration: none;
 font-weight: bold;
}

